log
Wed 10 May 2023 12:01:14 AM UTC: 
 sudoku.c | 70 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 69 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
818242d
Wed 10 May 2023 12:04:21 AM UTC: 
 sudoku.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_final’:
sudoku.c:128:3: error: this ‘for’ clause does not guard... [-Werror=misleading-indentation]
  128 |   for (int i = 0; i < 9; i++)
      |   ^~~
sudoku.c:134:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘for’
  134 |     return 1;
      |     ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
9225805
Wed 10 May 2023 12:04:39 AM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  4|3
total_score: 30/70
d4f0d1f
Wed 10 May 2023 12:06:36 AM UTC: 
 sudoku.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
17fe2a5
Wed 10 May 2023 12:08:06 AM UTC: 
 sudoku.c | 31 ++++++++++++++++++++++++++++++-
 1 file changed, 30 insertions(+), 1 deletion(-)
 tests:  0|0
2438f50
Wed 10 May 2023 12:10:22 AM UTC: 
 sudoku.c | 33 +++++++++++----------------------
 1 file changed, 11 insertions(+), 22 deletions(-)
 tests:  0|0
f0d8a3a
